is_debug = false
symbol_level = 0
is_component_build = false
use_kerberos = false
enable_nacl = false
enable_print_preview = false
enable_remoting = false
enable_reporting = false
enable_background_mode = false
enable_spellcheck = false
enable_plugins = false
enable_widevine = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"
is_official_build = true
use_custom_libcxx = false
use_gnome_keyring = false
use_udev = true
